refactor: streamline OBS privacy settings UI